...
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sutdlogo"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/loginusereditview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="Registered username or email"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/remotekyctext"
        android:ems="16"/>

    <EditText
        android:id="@+id/passwordeditview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="Password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/loginusereditview"
...
